--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a-scene>
 
   <!-- <a-entity gblock="https://vr.google.com/objects/bb5ZisB0L9L" position="0 0 -4"></a-entity> -->
-  <a-entity gblock="https://vr.google.com/objects/5vbJ5vildOq" position="0 0 -4"></a-entity>
+  <a-entity gblock="https://vr.google.com/objects/5vbJ5vildOq" position="0 0 -4" scale="0.5 0.5 0.5"></a-entity>
 
   <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
 
