responsive inspector button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     #visual-inspector-button {
       z-index: 100000;
       position: absolute;
+      width: 4vw;
+      height: 4vw;
+      min-width: 30px;
+      min-height: 30px;
+      left: 20px;
       bottom: 20px;
-      width: 60px;
-      height: 60px;
-      right: 110px;
       cursor: pointer;
       background-color: rgba(0,0,0,0.3);
     }
