--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>gBlock Component - A-Frame</title>
-  <meta name="description" content="gBlock Component - A-Frame">
+  <meta name="description" content="gBlock Component - A-Frame"/>
 
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
   <script src="dist/gblock.js"></script>
@@ -40,18 +40,18 @@
 <!-- 3D -->
 
 <a-scene>
-d
-  <a-entity gblock="https://vr.google.com/objects/5vbJ5vildOq" position="1.452 0 -4.549" scale="0.5 0.5 0.5" rotation="0 22 0"></a-entity>
-  <a-entity gblock="https://vr.google.com/objects/46w8bcXM21v" position="-2.146 -1.428 -5.143" scale="0.8 0.8 0.8" rotation="0 50 0"></a-entity>
-  <a-entity gblock="https://vr.google.com/objects/6XXj6DSBb08" position="-4.981 1.061 -6.411" scale="0.5 0.5 0.5" rotation="0 30 0"></a-entity>
-  <a-entity gblock="https://vr.google.com/objects/dVG0XJrpRJC" position="-7.626 -10.509 -8.452" scale="7 7 7"></a-entity>
+
+  <a-entity gblock="https://vr.google.com/objects/5vbJ5vildOq" position="0.111 -0.051 -4.926" scale="0.4 0.4 0.4" rotation="0 22 0"></a-entity>
+  <a-entity gblock="https://vr.google.com/objects/46w8bcXM21v" position="-2.334 -1.428 -4.052" scale="0.8 0.8 0.8" rotation="0 45 0"></a-entity>
+  <a-entity gblock="https://vr.google.com/objects/6XXj6DSBb08" position="1.564 0.822 -2.472" scale="0.4 0.4 0.4" rotation="0 165 0"></a-entity>
+  <a-entity gblock="https://vr.google.com/objects/dVG0XJrpRJC" position="-15.674 -21.021 -18.644" scale="14 14 14" rotation="0 -30 0"></a-entity>
 
   <!-- this one will not work because model is not remixable. play fair and respect the authors decision -->
   <a-entity gblock="https://vr.google.com/objects/bb5ZisB0L9L" position="0 -0.685 -4.812"></a-entity>
 
-  <a-plane position="-0.649 0 -6.148" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" material="" geometry="height:10;width:12"></a-plane>
+  <a-plane position="-0.649 0 -6.148" rotation="-90 0 0" width="4" height="4" color="#7d7d7d" material="" geometry="width:12;height:10"></a-plane>
 
-  <a-sky color="#eee"></a-sky>
+  <a-sky color="#afc9d6"></a-sky>
 
 </a-scene>
 
