--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
       position: absolute;
       top: 5px;
       width: 100%;
-      color: black;
+      color: white;
       font-size: 16;
+      font-family: Gill Sans, Gill Sans MT, Calibri, sans-serif;
+    }
+    #top a {
+      color: white;
     }
     #visual-inspector-button {
       z-index: 100000;
@@ -154,7 +158,7 @@
 <!-- 2D / UI -->
 
 <div id="top">
-  <a target="_blank" href="https://github.com/archilogic-com/aframe-gblock">gblock component</a> by <a target="_blank" href="https://3d.io">3d.io</a> for <a target="_blank" href="https://aframe.io/">aframe</a> loading remixable models from <a target="_blank" href="https://vr.google.com/objects/user/fdmGZ8QLHxA">Bruno Oliveira</a>, <a target="_blank" href="https://vr.google.com/objects/46w8bcXM21v">Jerad Bitner</a>, <a target="_blank" href="https://vr.google.com/objects/user/8UFiTVl7kcW">Chris Tarello</a>, <a target="_blank" href="https://vr.google.com/objects/user/eW-UZX3VB0K">Vladimir Ilic</a>
+  <a target="_blank" href="https://github.com/archilogic-com/aframe-gblock">gblock</a> component by <a target="_blank" href="https://3d.io">3d.io</a> for <a target="_blank" href="https://aframe.io/">A-Frame</a> loading remixable models from <a target="_blank" href="https://vr.google.com/objects/user/4kqx77GYPhP">Ti Kawamoto</a> and <a target="_blank" href="https://vr.google.com/objects/user/dQ0PNcdXYuo">Alberto Calvo</a>
 </div>
 <div id="visual-inspector-button">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><path d="M31.4,20.2l-.6-4.4,2.6-1.7-2.5-3.7-2.6,1.7L24.7,9.4l.6-3-4.4-.9-.6,3-4.4.6L14.2,6.5,10.5,9l1.7,2.6L9.5,15.2l-3-.6L5.6,19l3,.6L9.2,24,6.6,25.7l2.5,3.7,2.6-1.7,3.6,2.7-.6,3,4.4.9.6-3,4.4-.6,1.7,2.6,3.7-2.5-1.7-2.6s2.6-3.5,2.7-3.6l3,.6.9-4.4ZM20,25.5A5.5,5.5,0,1,1,25.5,20,5.5,5.5,0,0,1,20,25.5Z" style="fill:#fff"/></svg>
