changes sky color in example

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <a-scene>
 
-  <a-entity environment="preset:arches"></a-entity>
+  <a-entity environment="preset:arches; fog:0.85; skyType:gradient; horizonColor:1 1 1; skyColor:55 100 100;"></a-entity>
 
   <!-- desert -->
 
